// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders children 1`] = `
.c1 {
  color: #2C2C2C;
  margin: 0;
  font-family: Roboto,sans-serif;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 24px;
}

.c2 {
  color: #2C2C2C;
  margin: 0;
  font-family: Roboto,sans-serif;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  line-height: 16px;
  color: #747474;
  margin-bottom: 12px;
}

.c0 {
  background: #fff;
  padding: 24px;
  width: 296px;
  box-sizing: border-box;
  text-align: left;
}

<div
  className="c0"
>
  <h1
    className="c1"
  >
    Rick & Morty
  </h1>
  <p
    className="c2"
  >
    Season 3
  </p>
  <p>
    This is a children
  </p>
</div>
`;

exports[`render renders without crashing 1`] = `
.c1 {
  color: #2C2C2C;
  margin: 0;
  font-family: Roboto,sans-serif;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 24px;
}

.c2 {
  color: #2C2C2C;
  margin: 0;
  font-family: Roboto,sans-serif;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  line-height: 16px;
  color: #747474;
  margin-bottom: 12px;
}

.c0 {
  background: #fff;
  padding: 24px;
  width: 296px;
  box-sizing: border-box;
  text-align: left;
}

<div
  className="c0"
>
  <h1
    className="c1"
  >
    Rick & Morty
  </h1>
  <p
    className="c2"
  >
    Season 3
  </p>
</div>
`;
